--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "085ba2ee-6274-4e84-8ba1-a12b2fc3170b",
    "metadata": {
     "tags": []
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "65459282-8967-442a-88d9-3812b3e8c31a",
    "metadata": {
     "tags": []
@@ -92,7 +92,7 @@
     "        msg, aud = chat.step(msg=chat_msg, model=self.model, ret_aud=True)\n",
     "        com_msg, com_aud = chat.step(msg=\"Generate a funny, weird, and concise commercial for a company that now exists as a result of this paper.\", model=self.model, ret_aud=True)\n",
     "        msg = '\\n'.join([msg, com_msg])\n",
-    "        aud = b''.join([aud, JINGLE_AUDIO, com_msg])\n",
+    "        aud = b''.join([aud, JINGLE_AUDIO, com_aud])\n",
     "        return msg, aud\n",
     "\n",
     "    def step(self):\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "a60a8a33-5d82-4025-b68b-9a66f88c6041",
    "metadata": {
     "tags": []
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "903b4d61-2440-4d6d-a987-61c794961852",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "19acd44b-933e-46a1-94f7-5a59e4db5ede",
    "metadata": {
     "tags": []
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "8b28cdd3-a742-4287-86dc-f9978743dfb3",
    "metadata": {
     "tags": []
@@ -302,6 +302,7 @@
     "        arxiv_title = re.sub('[^0-9a-zA-Z]+', ' ', arxiv_episode.arxiv_title)\n",
     "        texts.append(f'ChatGPT generated podcast using model={MODEL} for https://arxiv.org/abs/{arxiv_id} {arxiv_title}')\n",
     "        successes += 1\n",
+    "        logger.info(texts[-1])\n",
     "\n",
     "        if not add_commercials:\n",
     "            continue\n",
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "f318ebbc-418f-42a6-b9e5-86a4e564761e",
    "metadata": {},
    "outputs": [],
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "24c116aa-d377-45e6-ae4a-9b8cb649605f",
    "metadata": {},
    "outputs": [],
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "5e281630-31a3-4bfe-be29-31e946668fb4",
    "metadata": {},
    "outputs": [],
@@ -354,7 +355,6 @@
     "arxiv_categories = [\"AI\", \"CL\", \"CC\", \"CE\", \"CG\", \"GT\", \"CV\", \"CY\", \"CR\", \"DS\", \"DB\", \"DL\", \"DM\", \"DC\", \"ET\", \"FL\", \"GL\", \"GR\", \"AR\", \"HC\", \"IR\", \"IT\", \"LO\", \"LG\", \"MS\", \"MA\", \"MM\", \"NI\", \"NE\", \"NA\", \"OS\", \"OH\", \"PF\", \"PL\", \"RO\", \"SI\", \"SE\", \"SD\", \"SC\", \"SY\"]\n",
     "\n",
     "def run(arxiv_category, upload=True, limit=5):\n",
-    "    # TODO: Multi thread each part\n",
     "    audios, texts = create_large_episode(arxiv_category, limit=limit)\n",
     "    ep = AudioCompletedEpisode(audios, podcast_args=PODCAST_ARGS)\n",
     "    if upload:\n",
@@ -364,20 +364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "cb999590-295d-4181-a2db-e5791e0234a4",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# ep = run(\"astro-ph\", upload=False, limit=1)\n",
+    "# ep = run(\"cs.IR\", upload=False, limit=1)\n",
     "# IPython.display.Audio(b''.join(ep.sounds))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3d70f5c1-4f60-4a2e-9825-406481b143d3",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e42913b5-c074-4563-a2e7-292b40eb42f3",
    "metadata": {},
    "outputs": [],
