add psyarxiv and fix commercial gen

--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "085ba2ee-6274-4e84-8ba1-a12b2fc3170b",
    "metadata": {
     "tags": []
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "65459282-8967-442a-88d9-3812b3e8c31a",
    "metadata": {
     "tags": []
@@ -90,6 +90,7 @@
     "    def write_one_part(self, chat_msg, with_commercial=False):\n",
     "        chat = PodcastChat(**{**self._kwargs, 'topic': self.title})\n",
     "        msg, aud = chat.step(msg=chat_msg, model=self.model, ret_aud=True)\n",
+    "        chat._history.pop(1)\n",
     "        com_msg, com_aud = chat.step(msg=\"Generate a funny, weird, and concise commercial for a company that now exists as a result of this paper.\", model=self.model, ret_aud=True)\n",
     "        msg = '\\n'.join([msg, com_msg])\n",
     "        aud = b''.join([aud, JINGLE_AUDIO, com_aud])\n",
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "a60a8a33-5d82-4025-b68b-9a66f88c6041",
    "metadata": {
     "tags": []
@@ -152,8 +153,10 @@
     "class ArxivEpisode(PDFEpisode):\n",
     "    ArxivPart = collections.namedtuple('ArxivPart', 'title text')\n",
     "\n",
-    "    def __init__(self, arxiv_id, model=DEFAULT_TEXTGEN_MODEL, **kwargs):\n",
+    "    def __init__(self, arxiv_id, id_is_url=False, title=None, model=DEFAULT_TEXTGEN_MODEL, **kwargs):\n",
     "        self.arxiv_id = arxiv_id\n",
+    "        self.id_is_url = id_is_url\n",
+    "        self.title = title\n",
     "        self.model = model\n",
     "        self.data = self.process_pdf(self.arxiv_id)\n",
     "        self.title = self.arxiv_title = self.get_title(self.arxiv_id)\n",
@@ -189,12 +192,17 @@
     "        return parts\n",
     "    \n",
     "    def arxiv_download(self, arxiv_id, out_file):\n",
-    "        url = f\"https://arxiv.org/pdf/{arxiv_id}.pdf\"\n",
+    "        if self.id_is_url:\n",
+    "            url = arxiv_id\n",
+    "        else:\n",
+    "            url = f\"https://arxiv.org/pdf/{arxiv_id}.pdf\"\n",
     "        response = requests.get(url)\n",
     "        with open(out_file, \"wb\") as f:\n",
     "            f.write(response.content)\n",
-    "    \n",
+    "\n",
     "    def get_title(self, arxiv_id):\n",
+    "        if self.title is not None:\n",
+    "            return self.title\n",
     "        url = f\"https://arxiv.org/abs/{arxiv_id}\"\n",
     "        response = requests.get(url)\n",
     "        soup = BeautifulSoup(response.text, 'html.parser')\n",
@@ -204,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "903b4d61-2440-4d6d-a987-61c794961852",
    "metadata": {},
    "outputs": [],
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "id": "19acd44b-933e-46a1-94f7-5a59e4db5ede",
    "metadata": {
     "tags": []
@@ -242,8 +250,7 @@
     "\n",
     "    def get_top(self):\n",
     "        \"\"\"Retrieve top Arxiv entries based on category.\"\"\"\n",
-    "        # url = f'http://export.arxiv.org/api/query?search_query=cat:{self.category}&start={self.start}' \\\n",
-    "        #       f'&max_results={self.limit}&sortBy=submittedDate&sortOrder=descending'\n",
+    "        if self.category == 'psyarxiv': return self.get_top_psyarxiv()\n",
     "        url = f'https://arxiv.org/list/{self.category}/recent'\n",
     "        print(url)\n",
     "        html = requests.get(url).content\n",
@@ -261,14 +268,18 @@
     "                'pdf': pdf_link\n",
     "            })\n",
     "        return [a[\"pdf\"].split('/')[-1] for a in articles]\n",
-    "        \n",
-    "        # data = feedparser.parse(url)\n",
-    "        # return [entry['id'].split('/')[-1] for entry in data['entries']]"
+    "\n",
+    "    def get_top_psyarxiv(self):\n",
+    "        url = 'https://share.osf.io/api/v3/index-card-search?cardSearchFilter%5BresourceType%5D=Preprint&cardSearchFilter%5Bpublisher%5D%5B%5D=https%3A%2F%2Fosf.io%2Fpreprints%2Fpsyarxiv&cardSearchFilter%5BaccessService%5D=https%3A%2F%2Fosf.io%2F&cardSearchText%5B*%2Ccreator.name%2CisContainedBy.creator.name%5D=&page%5Bcursor%5D=&page%5Bsize%5D=10&sort=-dateCreated'\n",
+    "        print(url)\n",
+    "        data = requests.get(url, headers={'Accept': 'application/vnd.api+json'}).json()\n",
+    "        data = [x for x in data['included'] if x[\"type\"] == \"index-card\"]\n",
+    "        return [(f\"{x['attributes']['resourceIdentifier'][0]}/download/\", x['attributes']['resourceMetadata']['title'][0]['@value']) for x in data]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "8b28cdd3-a742-4287-86dc-f9978743dfb3",
    "metadata": {
     "tags": []
@@ -288,9 +299,15 @@
     "        if successes >= limit:\n",
     "            break\n",
     "\n",
+    "        arxiv_kwargs = {'id_is_url': False}\n",
+    "        if isinstance(arxiv_id, tuple):\n",
+    "            arxiv_id, arxiv_title = arxiv_id\n",
+    "            arxiv_kwargs['title'] = arxiv_title\n",
+    "            arxiv_kwargs['id_is_url'] = True\n",
+    "            \n",
     "        logger.info(f\"Trying arxiv ID {arxiv_id} in {arxiv_category} with {successes}/{limit}\")\n",
     "        try:\n",
-    "            arxiv_episode = ArxivEpisode(arxiv_id, model=MODEL, podcast_args=PODCAST_ARGS, host_voices=HOST_VOICES)\n",
+    "            arxiv_episode = ArxivEpisode(arxiv_id, model=MODEL, podcast_args=PODCAST_ARGS, host_voices=HOST_VOICES, **arxiv_kwargs)\n",
     "            outline, txt = arxiv_episode.step()\n",
     "            logger.info(f\"Got outline: {outline[:500]}\")\n",
     "        except Exception as e:\n",
@@ -319,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "id": "f318ebbc-418f-42a6-b9e5-86a4e564761e",
    "metadata": {},
    "outputs": [],
@@ -334,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "id": "24c116aa-d377-45e6-ae4a-9b8cb649605f",
    "metadata": {},
    "outputs": [],
@@ -347,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "id": "5e281630-31a3-4bfe-be29-31e946668fb4",
    "metadata": {},
    "outputs": [],
@@ -364,14 +381,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "cb999590-295d-4181-a2db-e5791e0234a4",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# ep = run(\"cs.IR\", upload=False, limit=1)\n",
+    "# ep = run(\"psyarxiv\", upload=True, limit=5)\n",
     "# IPython.display.Audio(b''.join(ep.sounds))"
    ]
   },
@@ -397,8 +414,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7bdc3eea-4804-4d02-a77c-3972e03062e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4fe9503-17d2-4db1-be40-65b66d4497f0",
    "metadata": {},
    "outputs": [],
    "source": []
