--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -216,6 +216,7 @@
     "            logger.info(f'Popping message: {self._history.pop(1)}')\n",
     "        if next_msg is not None:\n",
     "            self._history.append({\"role\": \"user\", \"content\": next_msg})\n",
+    "        logger.info(f'Currently at {self.num_tokens_from_messages(self._history)=} tokens in conversation')\n",
     "        logger.info('requesting openai...')\n",
     "        resp = self._msg(**kwargs)\n",
     "        logger.info('received openai...')\n",
@@ -234,9 +235,11 @@
    "outputs": [],
    "source": [
     "class PodcastChat(Chat):\n",
-    "    def __init__(self, topic, podcast=\"award winning\", max_length=DEFAULT_LENGTH, hosts=['Tom', 'Jen'], host_voices=[OpenAITTS(OpenAITTS.MAN), OpenAITTS(OpenAITTS.WOMAN)]):\n",
+    "    def __init__(self, topic, podcast=\"award winning\", max_length=DEFAULT_LENGTH, hosts=['Tom', 'Jen'], host_voices=[OpenAITTS(OpenAITTS.MAN), OpenAITTS(OpenAITTS.WOMAN)], extra_system=None):\n",
     "        system = f\"\"\"You are an {podcast} podcast with hosts {hosts[0]} and {hosts[1]}.\n",
     "Respond with the hosts names before each line like {hosts[0]}: and {hosts[1]}:\"\"\".replace(\"\\n\", \" \")\n",
+    "        if extra_system is not None:\n",
+    "            system = '\\n'.join([system, extra_system])\n",
     "        super().__init__(system, max_length=max_length)\n",
     "        self._podcast = podcast\n",
     "        self._topic = topic\n",
