--- a/arxiv_langchain.ipynb
+++ b/arxiv_langchain.ipynb
@@ -37,6 +37,29 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "13210a6d-c397-4978-934a-b100d44bd02a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text(text):\n",
+    "    # Remove References Section\n",
+    "    text = re.sub(r'\\bReferences?\\b.*', '', text, flags=re.DOTALL|re.IGNORECASE)\n",
+    "    # Remove Footnotes Section\n",
+    "    text = re.sub(r'\\bFootnotes?\\b.*', '', text, flags=re.DOTALL|re.IGNORECASE)\n",
+    "    # Remove Figure/Table Insertions\n",
+    "    text = re.sub(r'- INSERT FIGURE \\d AROUND HERE -', '', text)\n",
+    "    text = re.sub(r'- INSERT TABLE \\d AROUND HERE -', '', text)\n",
+    "    # Remove extra whitespaces but keep line breaks\n",
+    "    text = re.sub(r'^\\s+|\\s+$', '', text, flags=re.MULTILINE)\n",
+    "    # Replace multiple spaces/newlines with a single space\n",
+    "    text = re.sub(r'[ \\t]+', ' ', text)\n",
+    "    text = re.sub(r'\\n+', '\\n', text)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "65459282-8967-442a-88d9-3812b3e8c31a",
    "metadata": {
     "tags": []
@@ -59,7 +82,9 @@
     "        \"\"\"Parse a PDF and extract the text.\"\"\"\n",
     "        with open(file, \"rb\") as f:\n",
     "            pdf = PdfReader(f)\n",
-    "            return ''.join(page.extract_text() for page in pdf.pages)\n",
+    "            txt = clean_text('\\n'.join(page.extract_text() for page in pdf.pages))\n",
+    "            if len(txt) < 1000: raise Exception(\"Text too small, cleaner must have messed up.\")\n",
+    "            return txt\n",
     "\n",
     "    def split_into_parts(self, text, max_tokens=MAX_TOKENS):\n",
     "        \"\"\"Split the text into parts based on titles and tokens.\"\"\"\n",
@@ -88,21 +113,7 @@
     "\n",
     "    @retrying.retry(stop_max_attempt_number=3, wait_fixed=2000)\n",
     "    def write_one_part(self, chat_msg, with_commercial=False):\n",
-    "        chat = PodcastChat(**{**self._kwargs, 'topic': self.title})\n",
-    "        msg, aud = chat.step(msg=chat_msg, model=self.model, ret_aud=True)\n",
-    "        chat._history.pop(1)\n",
-    "        com_msg, com_aud = chat.step(msg=\"Generate a funny, weird, and concise commercial for a company that now exists as a result of this paper.\", model=self.model, ret_aud=True)\n",
-    "        msg = '\\n'.join([msg, com_msg])\n",
-    "        aud = b''.join([aud, JINGLE_AUDIO, com_aud])\n",
-    "        return msg, aud\n",
-    "\n",
-    "    def step(self):\n",
-    "        outline = self.data[0].text\n",
-    "\n",
-    "        # Get parts\n",
-    "        with concurrent.futures.ThreadPoolExecutor(max_workers=16) as tpe:\n",
-    "            jobs = ([\n",
-    "                tpe.submit(self.write_one_part, f\"\"\"Explain the paper \\\"{self.title}\\\" completely, in full verbose detail.\n",
+    "        extra_system = \"\"\"Explain the paper completely, in full verbose detail, as a single response.\n",
     "Assume the listener doesn't know anything.\n",
     "Follow this guide:\n",
     "\n",
@@ -121,8 +132,23 @@
     "\n",
     "Conclusion (500+ words)\n",
     "Recap of the main points discussed in the episode.\n",
-    "Personal reflections on the paper and its broader relevance.\n",
+    "Personal reflections on the paper and its broader relevance.\"\"\"\n",
+    "        chat = PodcastChat(**{**self._kwargs, 'topic': self.title, 'extra_system': extra_system})\n",
+    "        msg, aud = chat.step(msg=chat_msg, model=self.model, ret_aud=True)\n",
+    "        chat._history.pop(2)\n",
+    "        chat._history[0]['content'] = chat._history[0]['content'][:len(chat._history[0]['content']) - len(extra_system)]\n",
+    "        com_msg, com_aud = chat.step(msg=\"Generate a funny, weird, and concise commercial for a company that now exists as a result of this paper.\", model=self.model, ret_aud=True)\n",
+    "        msg = '\\n'.join([msg, com_msg])\n",
+    "        aud = b''.join([aud, JINGLE_AUDIO, com_aud])\n",
+    "        return msg, aud\n",
     "\n",
+    "    def step(self):\n",
+    "        outline = self.data[0].text\n",
+    "\n",
+    "        # Get parts\n",
+    "        with concurrent.futures.ThreadPoolExecutor(max_workers=16) as tpe:\n",
+    "            jobs = ([\n",
+    "                tpe.submit(self.write_one_part, f\"\"\"Explain the paper \\\"{self.title}\\\" completely, in full verbose detail.\n",
     "Respond with the hosts names before each line like {self.chat._hosts[0]}: and {self.chat._hosts[1]}:\n",
     "The text in the paper is:\n",
     "{part.text}\n",
@@ -143,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "a60a8a33-5d82-4025-b68b-9a66f88c6041",
    "metadata": {
     "tags": []
@@ -212,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "903b4d61-2440-4d6d-a987-61c794961852",
    "metadata": {},
    "outputs": [],
@@ -235,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "19acd44b-933e-46a1-94f7-5a59e4db5ede",
    "metadata": {
     "tags": []
@@ -279,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "id": "8b28cdd3-a742-4287-86dc-f9978743dfb3",
    "metadata": {
     "tags": []
@@ -336,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "f318ebbc-418f-42a6-b9e5-86a4e564761e",
    "metadata": {},
    "outputs": [],
@@ -351,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "24c116aa-d377-45e6-ae4a-9b8cb649605f",
    "metadata": {},
    "outputs": [],
@@ -364,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "id": "5e281630-31a3-4bfe-be29-31e946668fb4",
    "metadata": {},
    "outputs": [],
@@ -381,62 +407,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cb999590-295d-4181-a2db-e5791e0234a4",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# ep = run(\"psyarxiv\", upload=True, limit=5)\n",
+    "# ep = run(\"psyarxiv\", upload=False, limit=1)\n",
     "# IPython.display.Audio(b''.join(ep.sounds))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d70f5c1-4f60-4a2e-9825-406481b143d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ep.upload(f'{datetime.datetime.now():%Y-%m-%d} astro-ph', '\\n\\n'.join(texts))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e42913b5-c074-4563-a2e7-292b40eb42f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# IPython.display.Audio(b''.join(ep.sounds))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7bdc3eea-4804-4d02-a77c-3972e03062e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4fe9503-17d2-4db1-be40-65b66d4497f0",
+   "id": "69c6c9a6-b84e-425f-9c6a-bb9c248f466f",
    "metadata": {},
    "outputs": [],
    "source": []
