--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "id": "251565c8-29cd-4315-bafb-630fe4cbbe51",
    "metadata": {
     "tags": []
@@ -15,6 +15,7 @@
     "import IPython\n",
     "import enum\n",
     "import jonlog\n",
+    "import json\n",
     "from gtts import gTTS\n",
     "import uuid\n",
     "import datetime as dt\n",
@@ -26,18 +27,22 @@
     "import threading\n",
     "import os\n",
     "import re\n",
+    "import io\n",
     "import retrying\n",
+    "import pydub\n",
     "from xml.dom import minidom\n",
     "from xml.etree import ElementTree as ET\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "import boto3\n",
+    "from botocore.exceptions import ClientError\n",
     "logger = jonlog.getLogger()\n",
     "openai.api_key = os.environ.get(\"OPENAI_KEY\", None) or open('/Users/jong/.openai_key').read().strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "id": "526459ff-9ad2-4e56-b11d-dc522fe319b3",
    "metadata": {},
    "outputs": [],
@@ -71,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "id": "f2e5b9a9-23d5-429c-8e86-32b3d012b9d1",
    "metadata": {
     "tags": []
@@ -103,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "id": "507cf5f9-cc95-44be-afb2-8c09b2a060d3",
    "metadata": {
     "tags": []
@@ -128,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "id": "1f7accf3-a13d-448e-927d-d47d7a3961e6",
    "metadata": {},
    "outputs": [],
@@ -159,7 +164,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 109,
+   "id": "02e805e7-4928-45dd-9860-4c7f33697d6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AWSPollyTTS:\n",
+    "    WOMAN = 'Kimberly'\n",
+    "    MAN = 'Matthew'\n",
+    "    BRIT_WOMAN = 'Amy'\n",
+    "\n",
+    "    def __init__(self, voice_id=None):\n",
+    "        self.client = boto3.client('polly', region_name=\"us-east-1\")\n",
+    "        self._voice_id = voice_id or self.WOMAN\n",
+    "\n",
+    "    @RateLimited(95)\n",
+    "    @jonlog.retry_with_logging()\n",
+    "    def tts(self, text):\n",
+    "        response = self.client.synthesize_speech(\n",
+    "            Text=text,\n",
+    "            OutputFormat='mp3',\n",
+    "            VoiceId=self._voice_id\n",
+    "        )\n",
+    "        # The audio stream containing the synthesized speech\n",
+    "        audio_stream = response.get('AudioStream')\n",
+    "        return audio_stream.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "46f8d0ca-2a36-4b5a-b39c-d19e0f94d63b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AWSChat:\n",
+    "    MODELS = {\n",
+    "        \"claude-instant\": \"anthropic.claude-instant-v1\",\n",
+    "        \"claude-best\": \"anthropic.claude-v2:1\",\n",
+    "    }\n",
+    "\n",
+    "    @classmethod\n",
+    "    def msg(cls, messages=None, model=\"anthropic.claude-instant-v1\", **kwargs):\n",
+    "        client = boto3.client(service_name=\"bedrock-runtime\", region_name=\"us-east-1\")\n",
+    "        try:\n",
+    "            # The different model providers have individual request and response formats.\n",
+    "            # For the format, ranges, and default values for Anthropic Claude, refer to:\n",
+    "            # https://docs.anthropic.com/claude/reference/complete_post\n",
+    "\n",
+    "            # Claude requires you to enclose the prompt as follows:\n",
+    "            # enclosed_prompt = \"Human: \" + prompt + \"\\n\\nAssistant:\"\n",
+    "            prompt = \"\\n\\n\".join(\n",
+    "                [f'{\"\" if (msg[\"role\"] == \"system\" and model == cls.MODELS[\"claude-best\"]) else (\"Human\" if msg[\"role\"] != \"assistant\" else \"Assistant\")}: {msg[\"content\"]}' for msg in messages] +\n",
+    "                [\"Assistant:\"]\n",
+    "            )\n",
+    "\n",
+    "            if 'temperature' not in kwargs:\n",
+    "                kwargs['temperature'] = 1\n",
+    "            body = {\n",
+    "                \"prompt\": prompt,\n",
+    "                \"max_tokens_to_sample\": 2048,\n",
+    "                **kwargs\n",
+    "            }\n",
+    "            response = client.invoke_model(\n",
+    "                modelId=model, body=json.dumps(body)\n",
+    "            )\n",
+    "            response_body = json.loads(response[\"body\"].read())\n",
+    "            completion = response_body[\"completion\"]\n",
+    "            return completion\n",
+    "        except ClientError as e:\n",
+    "            logger.exception(f\"Couldn't invoke {model}\", e)\n",
+    "            raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "id": "a2ea46ab-a973-4ad2-852b-2613274dd9e7",
    "metadata": {
     "tags": []
@@ -167,7 +247,7 @@
    "outputs": [],
    "source": [
     "DEFAULT_MODEL = 'gpt-4-1106-preview'\n",
-    "DEFAULT_LENGTH  = 120_000\n",
+    "DEFAULT_LENGTH  = 80_000\n",
     "\n",
     "class Chat:\n",
     "    class Model(enum.Enum):\n",
@@ -203,12 +283,22 @@
     "\n",
     "    @retrying.retry(stop_max_attempt_number=5, wait_fixed=2000)\n",
     "    def _msg(self, *args, model=DEFAULT_MODEL, **kwargs):\n",
-    "        return openai.OpenAI(api_key=openai.api_key).chat.completions.create(\n",
-    "            *args,\n",
-    "            model=model,\n",
-    "            messages=self._history,\n",
-    "            **kwargs\n",
-    "        )\n",
+    "        logger.info(f'requesting chatcompletion {model=}...')\n",
+    "        if model.startswith(\"AWS/\"):\n",
+    "            model = model[4:]\n",
+    "            resp = AWSChat.msg(\n",
+    "                messages=self._history,\n",
+    "                **kwargs\n",
+    "            )\n",
+    "        else:\n",
+    "            resp = openai.OpenAI(api_key=openai.api_key).chat.completions.create(\n",
+    "                *args,\n",
+    "                model=model,\n",
+    "                messages=self._history,\n",
+    "                **kwargs\n",
+    "            ).choices[0].message.content\n",
+    "        logger.info(f'received chatcompletion {model=}...')\n",
+    "        return resp\n",
     "    \n",
     "    def message(self, next_msg=None, **kwargs):\n",
     "        # TODO: Optimize this if slow through easy caching\n",
@@ -217,17 +307,15 @@
     "        if next_msg is not None:\n",
     "            self._history.append({\"role\": \"user\", \"content\": next_msg})\n",
     "        logger.info(f'Currently at {self.num_tokens_from_messages(self._history)=} tokens in conversation')\n",
-    "        logger.info('requesting openai...')\n",
     "        resp = self._msg(**kwargs)\n",
-    "        logger.info('received openai...')\n",
-    "        text = resp.choices[0].message.content\n",
+    "        text = resp\n",
     "        self._history.append({\"role\": \"assistant\", \"content\": text})\n",
     "        return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 116,
    "id": "14a0eef7-3b50-4ca7-9210-2042d7adbe00",
    "metadata": {
     "tags": []
@@ -235,7 +323,7 @@
    "outputs": [],
    "source": [
     "class PodcastChat(Chat):\n",
-    "    def __init__(self, topic, podcast=\"award winning\", max_length=DEFAULT_LENGTH, hosts=['Tom', 'Jen'], host_voices=[OpenAITTS(OpenAITTS.MAN), OpenAITTS(OpenAITTS.WOMAN)], extra_system=None):\n",
+    "    def __init__(self, topic, podcast=\"award winning\", max_length=DEFAULT_LENGTH, hosts=['Tom', 'Jen'], host_voices=[AWSPollyTTS(AWSPollyTTS.MAN), AWSPollyTTS(AWSPollyTTS.WOMAN)], extra_system=None):\n",
     "        system = f\"\"\"You are an {podcast} podcast with hosts {hosts[0]} and {hosts[1]}.\n",
     "Respond with the hosts names before each line like {hosts[0]}: and {hosts[1]}:\"\"\".replace(\"\\n\", \" \")\n",
     "        if extra_system is not None:\n",
@@ -256,9 +344,9 @@
     "            i = 0\n",
     "            jobs = []\n",
     "            def write_audio(msg, i, voice, **kwargs):\n",
-    "                logger.info(f'requesting tts {i=}')\n",
+    "                logger.info(f'requesting tts {i=} {voice=}')\n",
     "                s = voice.tts(msg)\n",
-    "                logger.info(f'received tts {i=}')\n",
+    "                logger.info(f'received tts {i=} {voice=}')\n",
     "                return s\n",
     "\n",
     "            text = text.replace('\\n', '!!!LINEBREAK!!!').replace('\\\\', '').replace('\"', '')\n",
@@ -283,7 +371,7 @@
     "            # Concat files\n",
     "            audios = [job.result() for job in jobs]\n",
     "            logger.info('concatting audio')\n",
-    "            audio = b''.join(audios)\n",
+    "            audio = merge_mp3s(audios)\n",
     "            logger.info('done with audio!')\n",
     "            IPython.display.display(IPython.display.Audio(audio, autoplay=False))\n",
     "            return audio\n",
@@ -298,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 117,
    "id": "6cb12748-5a8a-4b27-b688-2e7bc583be17",
    "metadata": {
     "tags": []
@@ -401,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 118,
    "id": "6fea16c5-3d56-4277-a6eb-d74667b64435",
    "metadata": {
     "tags": []
@@ -431,7 +519,7 @@
     "Only return the parts and nothing else.\n",
     "Do not include a conclusion or intro.\n",
     "Do not write more than {n} parts.\n",
-    "Format it like this: 1. insert-title-here... 2. another-title-here...\"\"\".replace(\"\\n\", \" \"))\n",
+    "Format it like this: 1. insert-title-here, 2. another-title-here, ...\"\"\".replace(\"\\n\", \" \"))\n",
     "        resp = chat.message(model=self.text_model)\n",
     "        chapter_pattern = re.compile(r'\\d+\\.\\s+.*')\n",
     "        chapters = chapter_pattern.findall(resp)\n",
@@ -471,13 +559,41 @@
     "        with tempfile.TemporaryDirectory() as tmpdir:\n",
     "            tmppath = os.path.join(tmpdir, \"audio_file.mp3\")\n",
     "            with open(tmppath, \"wb\") as f:\n",
-    "                f.write(b''.join(self.sounds))\n",
+    "                f.write(merge_mp3s(self.sounds))\n",
     "            self.pod.upload_episode(tmppath, f\"podcasts/audio/{title_small}.mp3\", title, descr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "75d0a7d1-de77-4129-a15c-537c7919b678",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_mp3s(mp3_bytes_list):\n",
+    "    \"\"\"\n",
+    "    Merges multiple MP3 bytestrings into a single MP3 bytestring.\n",
+    "    \n",
+    "    :param mp3_bytes_list: List of MP3 bytestrings\n",
+    "    :return: Merged MP3 as bytestring\n",
+    "    \"\"\"\n",
+    "    # Convert the first MP3 bytestring to an AudioSegment\n",
+    "    combined = pydub.AudioSegment.from_file(io.BytesIO(mp3_bytes_list[0]), format=\"mp3\")\n",
+    "\n",
+    "    # Loop through the rest of the MP3 bytestrings and append them\n",
+    "    for mp3_bytes in mp3_bytes_list[1:]:\n",
+    "        next_segment = pydub.AudioSegment.from_file(io.BytesIO(mp3_bytes), format=\"mp3\")\n",
+    "        combined += next_segment\n",
+    "\n",
+    "    # Export the combined audio to a bytestring\n",
+    "    combined_buffer = io.BytesIO()\n",
+    "    combined.export(combined_buffer, format=\"mp3\")\n",
+    "    return combined_buffer.getvalue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "id": "1132bda8-7767-4f78-9789-046c4af27a72",
    "metadata": {
     "tags": []
@@ -487,12 +603,12 @@
     "# %%time\n",
     "# ep = Episode(\n",
     "#     episode_type='narration',\n",
-    "#     topic=\"Hidden History: Unraveling 7 of History's Mysteries - From the Great Emu War to the Green Children of Woolpit\",\n",
-    "#     max_length=120_000,\n",
-    "#     text_model='gpt-4-1106-preview',\n",
+    "#     topic=\"Hidden History: Unraveling 3 of History's Adorable Mysteries\",\n",
+    "#     max_length=80_000,\n",
+    "#     # text_model='gpt-4-1106-preview',\n",
+    "#     text_model='AWS/anthropic.claude-instant-v1',\n",
     "# )\n",
-    "# outline, txt = ep.step(nparts='7')\n",
-    "# ep.upload(\"(New OpenAI APIs v1) \" + ep.chat._topic[:200], '\\n'.join(outline))"
+    "# outline, txt = ep.step(nparts='3')"
    ]
   },
   {
