--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -184,7 +184,8 @@
     "        response = self.client.synthesize_speech(\n",
     "            Text=text,\n",
     "            OutputFormat='mp3',\n",
-    "            VoiceId=self._voice_id\n",
+    "            VoiceId=self._voice_id,\n",
+    "            Engine=\"neural\",\n",
     "        )\n",
     "        # The audio stream containing the synthesized speech\n",
     "        audio_stream = response.get('AudioStream')\n",
