Email Jonreads setup

--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -508,6 +508,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c88be541-f005-412f-abc0-7cfa159e7a93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PodcastXMLHandler:\n",
+    "    def __init__(self):\n",
+    "        self.root = ET.Element(\"channel\")  # 'channel' is typically used in podcast RSS feeds\n",
+    "        self.tree = ET.ElementTree(self.root)\n",
+    "\n",
+    "    def to_xml(self, filepath):\n",
+    "        self.tree.write(filepath, encoding='utf-8', xml_declaration=True, pretty_print=True)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_xml(cls, filepath):\n",
+    "        self = cls()\n",
+    "        self.tree = ET.parse(filepath)\n",
+    "        self.root = self.tree.getroot()\n",
+    "        return self\n",
+    "\n",
+    "    def contains_episode(self, episode_name):\n",
+    "        for episode in self.root.findall('./channel/item'):\n",
+    "            title = episode.find('title').text\n",
+    "            if title == episode_name:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "    def remove_episodes_older_than(self, limit):\n",
+    "        now = datetime.datetime.now()\n",
+    "        for episode in self.root.findall('./channel/item'):\n",
+    "            pub_date = datetime.datetime.strptime(episode.find('pubDate').text, '%a, %d %b %Y %H:%M:%S %Z')  # RSS date format\n",
+    "            if now - pub_date > limit:\n",
+    "                episode.getparent().remove(episode)\n",
+    "\n",
+    "    def add_episode(self, episode_details):\n",
+    "        episode = ET.SubElement(self.root, './channel/item')\n",
+    "        for key, value in episode_details.items():\n",
+    "            ET.SubElement(episode, key).text = str(value)\n",
+    "\n",
+    "\"\"\"\n",
+    "pd = PodcastXMLHandler.from_xml('/Users/jong/Downloads/podcast.xml')\n",
+    "pd.contains_episode('cs.IR: Recent Research Papers on Data Science and Cybersecurity.')\n",
+    "pd.remove_episodes_older_than(datetime.timedelta(days=30))\n",
+    "pd.to_xml('/Users/jong/Downloads/podcast2.xml')\n",
+    "\"\"\"\n",
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 142,
    "id": "6cb12748-5a8a-4b27-b688-2e7bc583be17",
    "metadata": {
@@ -518,11 +568,12 @@
     "class PodcastRSSFeed:\n",
     "    \"\"\"Class to handle rss feed operations using github pages.\"\"\"\n",
     "\n",
-    "    def __init__(self, org, repo, xml_path):\n",
+    "    def __init__(self, org, repo, xml_path, clean_timedelta=None):\n",
     "        self.org = org\n",
     "        self.repo = repo\n",
     "        self.xml_path = xml_path\n",
     "        self.local_xml_path = self.download_podcast_xml()\n",
+    "        self.clean_timedelta = clean_timedelta\n",
     "\n",
     "    def get_file_base64(self, file_path):\n",
     "        with open(file_path, 'rb') as file:\n",
@@ -559,6 +610,31 @@
     "        })\n",
     "        ET.SubElement(item, 'guid').text = str(uuid.uuid4())\n",
     "\n",
+    "        # Convert back to string and pretty-format\n",
+    "        pretty_xml = minidom.parseString(ET.tostring(root)).toprettyxml(indent='  ')\n",
+    "        # Remove extra newlines\n",
+    "        pretty_xml = os.linesep.join([s for s in pretty_xml.splitlines() if s.strip()])\n",
+    "\n",
+    "        return pretty_xml\n",
+    "\n",
+    "    def remove_episodes_older_than(self, xml_data, limit):\n",
+    "        now = dt.datetime.now()\n",
+    "        root = ET.fromstring(xml_data)\n",
+    "        for episode in root.findall('./channel/item'):\n",
+    "            pub_date = dt.datetime.strptime(episode.find('pubDate').text, '%a, %d %b %Y %H:%M:%S %Z')  # RSS date format\n",
+    "            if now - pub_date > limit:\n",
+    "                episode_path = episode.find('enclosure').attrib['url'].split('.github.io/', 1)[1]\n",
+    "                logger.info(f\"Deleting old episode: {episode_path}\")\n",
+    "                episode.getparent().remove(episode)\n",
+    "                # Get the repository\n",
+    "                try:\n",
+    "                    repo = gh.get_user().get_repo(self.repo)\n",
+    "                except:\n",
+    "                    repo = gh.get_organization(self.org).get_repo(self.repo)\n",
+    "                try:\n",
+    "                    repo.delete_file(episode_path, \"remove test\", contents.sha, branch=\"test\")\n",
+    "                except Exception as e:\n",
+    "                    logger.exception(e)\n",
     "        # Convert back to string and pretty-format\n",
     "        pretty_xml = minidom.parseString(ET.tostring(root)).toprettyxml(indent='  ')\n",
     "        # Remove extra newlines\n",
