--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -26,6 +26,7 @@
     "import time\n",
     "import threading\n",
     "import os\n",
+    "import random\n",
     "import re\n",
     "import io\n",
     "import retrying\n",
@@ -194,6 +195,21 @@
     "        # The audio stream containing the synthesized speech\n",
     "        audio_stream = response.get('AudioStream')\n",
     "        return audio_stream.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "765f4de8-d197-434d-9364-e0044ffdf7b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_random_voice():\n",
+    "    return random.choice([\n",
+    "        OpenAITTS(voice_id=vid) for vid in ['alloy', 'echo', 'fable', 'onyx', 'nova', 'shimmer']\n",
+    "    ] + [\n",
+    "        AWSPollyTTS(voice_id=vid) for vid in ['Kimberly', 'Matthew', 'Amy']\n",
+    "    ])"
    ]
   },
   {
