--- a/email_jonreads.ipynb
+++ b/email_jonreads.ipynb
@@ -190,6 +190,7 @@
     "            topic=title,\n",
     "            episode_type='pure_tts',\n",
     "            podcast_args=podcast_args.values(),\n",
+    "            host_voices=[get_random_voice(), get_random_voice()],\n",
     "        )\n",
     "        ep.step(msg=ep_lines)\n",
     "        ep.upload(title, f'{title_long}')"
