turbo models and better random voices

--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "251565c8-29cd-4315-bafb-630fe4cbbe51",
    "metadata": {
     "tags": []
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "526459ff-9ad2-4e56-b11d-dc522fe319b3",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "id": "f2e5b9a9-23d5-429c-8e86-32b3d012b9d1",
    "metadata": {
     "tags": []
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "507cf5f9-cc95-44be-afb2-8c09b2a060d3",
    "metadata": {
     "tags": []
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "1f7accf3-a13d-448e-927d-d47d7a3961e6",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "02e805e7-4928-45dd-9860-4c7f33697d6b",
    "metadata": {},
    "outputs": [],
@@ -199,22 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "765f4de8-d197-434d-9364-e0044ffdf7b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_random_voice():\n",
-    "    return random.choice([\n",
+    "def get_random_voices(n=2):\n",
+    "    return random.sample([\n",
     "        OpenAITTS(voice_id=vid) for vid in ['alloy', 'echo', 'fable', 'onyx', 'nova', 'shimmer']\n",
     "    ] + [\n",
     "        AWSPollyTTS(voice_id=vid) for vid in ['Kimberly', 'Matthew', 'Amy']\n",
-    "    ])"
+    "    ], n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "46f8d0ca-2a36-4b5a-b39c-d19e0f94d63b",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 21,
    "id": "2aaeccd5-5c89-44ec-9d65-4afe4b95b6a9",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 22,
    "id": "e1682e3e-2215-49aa-9160-7d5809e423e2",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 23,
    "id": "a2ea46ab-a973-4ad2-852b-2613274dd9e7",
    "metadata": {
     "tags": []
@@ -372,13 +372,13 @@
    "source": [
     "# DEFAULT_MODEL = 'gpt-4-1106-preview'\n",
     "# DEFAULT_LENGTH  = 80_000\n",
-    "DEFAULT_MODEL = 'GOOGLE/gemini-pro'\n",
+    "DEFAULT_MODEL = 'gpt-3.5-turbo'\n",
     "DEFAULT_LENGTH  = 29_000\n",
     "\n",
     "class Chat:\n",
     "    class Model(enum.Enum):\n",
     "        GPT3_5 = \"gpt-3.5-turbo\"\n",
-    "        GPT_4  = \"gpt-4-1106-preview\"\n",
+    "        GPT_4  = \"gpt-4-turbo-preview\"\n",
     "\n",
     "    def __init__(self, system, max_length=DEFAULT_LENGTH):\n",
     "        self._system = system\n",
@@ -453,12 +453,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 24,
    "id": "14a0eef7-3b50-4ca7-9210-2042d7adbe00",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found credentials in shared credentials file: ~/.aws/credentials\n"
+     ]
+    }
+   ],
    "source": [
     "class PodcastChat(Chat):\n",
     "    def __init__(self, topic, podcast=\"award winning\", max_length=DEFAULT_LENGTH, hosts=['Tom', 'Jen'], host_voices=[AWSPollyTTS(AWSPollyTTS.MAN), OpenAITTS(OpenAITTS.WOMAN)], extra_system=None):\n",
@@ -524,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c88be541-f005-412f-abc0-7cfa159e7a93",
    "metadata": {},
    "outputs": [],
@@ -574,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 26,
    "id": "6cb12748-5a8a-4b27-b688-2e7bc583be17",
    "metadata": {
     "tags": []
@@ -703,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 27,
    "id": "6fea16c5-3d56-4277-a6eb-d74667b64435",
    "metadata": {
     "tags": []
@@ -779,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 28,
    "id": "75d0a7d1-de77-4129-a15c-537c7919b678",
    "metadata": {},
    "outputs": [],
@@ -807,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 29,
    "id": "1132bda8-7767-4f78-9789-046c4af27a72",
    "metadata": {
     "scrolled": true,
